terraformgke/argodeploy/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonweb
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: python.devopsisfun.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pythonsvc
              port:
                number: 80
